--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,7 @@
 == README
 
+{<img src="https://travis-ci.org/yutakakinjyo/acscore.png?branch=rspec" alt="Build Status" />}[https://travis-ci.org/yutakakinjyo/acscore]
+
 This README would normally document whatever steps are necessary to get the
 application up and running.
 
